--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <nav class="navbar navbar-default">
     <ul class="nav navbar-nav">
       <li>
-        <a routerLinkActive="active" routerLink="rewards">Rewards</a>
+        <a routerLinkActive="active" routerLink="customers"><h5>Customers</h5></a>
       </li>
     </ul>
   </nav>
