--- a/src/app/list-rewards/list-rewards.component.html
+++ b/src/app/list-rewards/list-rewards.component.html
@@ -1,5 +1,22 @@
-<h3>{{customer.name}}</h3>
-<h3>Reward Points {{customer.rewardPoints}}</h3>
+
+<div class="form-group row">
+  <label for="customer" class="col-sm-2 col-form-label">Customer Name</label>
+  <div class="col-sm-10">
+    <input type="text" readonly class="form-control-plaintext" id="customer" value="{{customer.name}}">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="totalPurchases" class="col-sm-2 col-form-label">Total Purchase</label>
+  <div class="col-sm-10">
+    <input type="text" readonly class="form-control-plaintext" id="totalPurchases" value="$ {{customer.totalPurchases | number:'1.1-2'}}">
+  </div>
+</div>
+<div class="form-group row">
+  <label for="rewardPoints" class="col-sm-2 col-form-label">Total Reward Points</label>
+  <div class="col-sm-10">
+    <input type="text" readonly class="form-control-plaintext" id="rewardPoints" value="{{customer.rewardPoints}}">
+  </div>
+</div>
 
 <div class="container">
   <table class="table">
@@ -24,7 +41,7 @@
   </table>
 
   <div class="row">
-    <td><button (click)="addTodo()" class="btn btn-success">Add</button></td>
+    <td><button (click)="refreshCustomers()" class="btn btn-success">Back</button></td>
   </div>
 
 </div>
